spec/e2e/operator/less_or_equal_num_nonnum.lit
1 <= "1"; # error: [line 1] Runtime error: Operands must be two numbers or two strings.
